# invest-lab

./: README.md  pyproject.toml
configs/: universe.example.json
data/sample/: bars.csv
docs/: STDD.md
examples/: run_backtest.py
src/auto_invest/: __init__.py
src/auto_invest/adapters/: __init__.py  csv_market_data.py
src/auto_invest/apps/: backtest_cli.py
src/auto_invest/backtest/: __init__.py  engine.py  reports.py
src/auto_invest/domain/: __init__.py  models.py  portfolio.py
src/auto_invest/ports/: __init__.py  market_data.py
src/auto_invest/strategies/: __init__.py  base.py  buy_and_hold.py  moving_average.py
tests/: test_backtest.py  test_market_data.py  test_strategy.py
